bug with responsive hor menu wrong sizing on mobile devices, after adding wrapper

--- a/client/src/NavBar/menu.css
+++ b/client/src/NavBar/menu.css
@@ -2,6 +2,12 @@
   background-color: #222;
 border-color: #080808;
 }
+  #nav .row {
+    background-color: #222;
+  }
+  #nav .navbar-inverse {
+    height:auto;
+  }
   .navBg .navbar-inverse {
     border:none;
   }
